Update notebooks and parametrisations

--- a/notebooks/run_sbml_model.ipynb
+++ b/notebooks/run_sbml_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,79 +116,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Number of parameters: 42\n",
-      "╒═════════════╤════════════╤═══════════════════╤════════════════════════════════════════════════════════════════════════════╕\n",
-      "│ Id          │      Value │ Unit              │ Name                                                                       │\n",
-      "╞═════════════╪════════════╪═══════════════════╪════════════════════════════════════════════════════════════════════════════╡\n",
-      "│ BM          │   70       │ KiloGM            │ body mass                                                                  │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ BSA         │  190       │ DeciM2            │ body surface area                                                          │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Height_sc   │    0.0001  │ DeciM             │ thickness stratum corneum                                                  │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Height_vs   │    0.0122  │ DeciM             │ thickness viable epidermis                                                 │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVFat      │    0.209   │ UNITLESS          │ fat as fraction of total body volume                                       │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVRich     │    0.105   │ UNITLESS          │ richly perfused tissues as fraction of total body volume                   │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVLiver    │    0.024   │ UNITLESS          │ liver as fraction of total body volume                                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVBlood    │    0.068   │ UNITLESS          │ blood as fraction of total body volume                                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFBlood    │    4.8     │ L_PER_KiloGM_HR   │ total blood flow per unit mass                                             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFFat      │    0.046   │ UNITLESS          │ fat fraction of total blood flow going to compartments                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFPoor     │    0.134   │ UNITLESS          │ poorly perfused tissues fraction of total blood flow going to compartments │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFLiver    │    0.259   │ UNITLESS          │ liver fraction of total blood flow going to compartments                   │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFSkin     │    0.054   │ UNITLESS          │ skin fraction of total blood flow going to compartments                    │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Falv        │ 2220       │ L_PER_HR          │ alveolar ventilation rate                                                  │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ rho         │    1       │ KiloGM_PER_L      │ tissue density                                                             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCFat       │   31.11    │ UNITLESS          │ partition coefficient fat over blood                                       │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCLiver     │    4.95    │ UNITLESS          │ partition coefficient liver over blood                                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCRich      │    1.92    │ UNITLESS          │ partition coefficient poorly perfused tissue over blood                    │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCPoor      │    3.03    │ UNITLESS          │ partition coefficient richly perfused tissue over blood                    │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCSkin_sc   │    0.1     │ UNITLESS          │ partition coefficient viable skin over stratum corneum                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCSkin      │    3.71    │ UNITLESS          │ partition coefficient viable skin over blood                               │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCAir       │    1e+99   │ UNITLESS          │ partition coefficient blood over air                                       │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Km          │    0.00484 │ MilliMOL          │ Michaelis constant                                                         │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Michaelis   │    1       │ UNITLESS          │ flag for Michaelis-Menten or linear metabolism                             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Vmax        │    0.26    │ MilliMOL_PER_L_HR │ maximum rate of metabolism                                                 │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ fub         │    0.11    │ UNITLESS          │ unbound fraction in blood                                                  │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ fSA_exposed │    0.1     │ UNITLESS          │ fraction of skin surface area actually exposed                             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Kp_sc_vs    │    0.1     │ DeciM_PER_HR      │ diffusion rate from stratum corneum to viable skin                         │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ kGut        │    1.3     │ PER_H             │ oral absorption rate constant                                              │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ CLH         │    0       │ L_PER_HR          │ hepatic clearance rate                                                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ Ke          │    7.5     │ L_PER_HR          │ renal excretion rate                                                       │\n",
-      "╘═════════════╧════════════╧═══════════════════╧════════════════════════════════════════════════════════════════════════════╛\n"
+     "ename": "RuntimeError",
+     "evalue": "No sbml element exists for symbol 'rho'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[6], line 5\u001b[0m\n\u001b[0;32m      2\u001b[0m rr_model \u001b[38;5;241m=\u001b[39m rr\u001b[38;5;241m.\u001b[39mRoadRunner(sbml_file)\n\u001b[0;32m      4\u001b[0m \u001b[38;5;66;03m# Load parametrisation\u001b[39;00m\n\u001b[1;32m----> 5\u001b[0m \u001b[43mloadParametrisation\u001b[49m\u001b[43m(\u001b[49m\u001b[43mrr_model\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparam_file\u001b[49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mparam_instance_id\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m      7\u001b[0m \u001b[38;5;66;03m# Get the SBML model\u001b[39;00m\n\u001b[0;32m      8\u001b[0m document \u001b[38;5;241m=\u001b[39m ls\u001b[38;5;241m.\u001b[39mreadSBML(sbml_file)\n",
+      "Cell \u001b[1;32mIn[5], line 37\u001b[0m, in \u001b[0;36mloadParametrisation\u001b[1;34m(model, filename, idInstance)\u001b[0m\n\u001b[0;32m     35\u001b[0m df \u001b[38;5;241m=\u001b[39m df\u001b[38;5;241m.\u001b[39mloc[df[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124midModelInstance\u001b[39m\u001b[38;5;124m'\u001b[39m] \u001b[38;5;241m==\u001b[39m idInstance]\n\u001b[0;32m     36\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m index, row \u001b[38;5;129;01min\u001b[39;00m df\u001b[38;5;241m.\u001b[39miterrows():\n\u001b[1;32m---> 37\u001b[0m     \u001b[43mmodel\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;28;43mstr\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mrow\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mParameter\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[43m)\u001b[49m\u001b[43m]\u001b[49m \u001b[38;5;241m=\u001b[39m row[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mValue\u001b[39m\u001b[38;5;124m'\u001b[39m]\n",
+      "File \u001b[1;32m~\\AppData\\Roaming\\Python\\Python312\\site-packages\\roadrunner\\roadrunner.py:4423\u001b[0m, in \u001b[0;36mRoadRunner.__setitem__\u001b[1;34m(self, id, value)\u001b[0m\n\u001b[0;32m   4422\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__setitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, \u001b[38;5;28mid\u001b[39m: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mstd::string const &\u001b[39m\u001b[38;5;124m\"\u001b[39m, value: \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mdouble\u001b[39m\u001b[38;5;124m\"\u001b[39m) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m \u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mvoid\u001b[39m\u001b[38;5;124m\"\u001b[39m:\n\u001b[1;32m-> 4423\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[43m_roadrunner\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mRoadRunner___setitem__\u001b[49m\u001b[43m(\u001b[49m\u001b[38;5;28;43mself\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[38;5;28;43mid\u001b[39;49m\u001b[43m,\u001b[49m\u001b[43m \u001b[49m\u001b[43mvalue\u001b[49m\u001b[43m)\u001b[49m\n",
+      "\u001b[1;31mRuntimeError\u001b[0m: No sbml element exists for symbol 'rho'"
      ]
     }
    ],
@@ -233,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +586,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
