--- a/notebooks/run_sbml_model.ipynb
+++ b/notebooks/run_sbml_model.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,12 +52,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Running the model"
+    "## Define helper functions"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -126,69 +126,69 @@
      "output_type": "stream",
      "text": [
       "Number of parameters: 41\n",
-      "╒═════════════╤════════════╤═══════════════════╤════════════════════════════════════════════════════════════════════╕\n",
-      "│ Id          │      Value │ Unit              │ Name                                                               │\n",
-      "╞═════════════╪════════════╪═══════════════════╪════════════════════════════════════════════════════════════════════╡\n",
-      "│ BM          │   70       │ KiloGM            │ body mass                                                          │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ BSA         │  190       │ DeciM2            │ body surface area                                                  │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Height_sc   │    0.0001  │ DeciM             │ thickness stratum corneum                                          │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Height_vs   │    0.0122  │ DeciM             │ thickness viable epidermis                                         │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVFat      │    0.209   │ L_PER_KiloGM      │ fat volume as as fraction of total body volume                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVRich     │    0.105   │ L_PER_KiloGM      │ richly perfused tissues volume as as fraction of total body volume │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVLiver    │    0.024   │ L_PER_KiloGM      │ liver volume as as fraction of total body volume                   │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scVBlood    │    0.068   │ L_PER_KiloGM      │ blood volume as as fraction of total body volume                   │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFBlood    │    4.8     │ L_PER_KiloGM_HR   │ total blood flow per unit mass                                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFFat      │    0.046   │ UNITLESS          │ fraction of blood flow going to adipose tissue                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFPoor     │    0.134   │ UNITLESS          │ fraction total blood flow going to poorly perfused tissue          │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFLiver    │    0.259   │ UNITLESS          │ fraction total blood flow going to liver                           │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ scFSkin     │    0.054   │ UNITLESS          │ fraction total blood flow going to skin                            │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Falv        │ 2220       │ L_PER_HR          │ alveolar ventilation rate                                          │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCFat       │   31.11    │ UNITLESS          │ partition coefficient fat over blood                               │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCLiver     │    4.95    │ UNITLESS          │ partition coefficient liver over blood                             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCRich      │    1.92    │ UNITLESS          │ partition coefficient poorly perfused tissue over blood            │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCPoor      │    3.03    │ UNITLESS          │ partition coefficient richly perfused tissue over blood            │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCSkin_sc   │    0.1     │ UNITLESS          │ partition coefficient viable skin over stratum corneum             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCSkin      │    3.71    │ UNITLESS          │ partition coefficient viable skin over blood                       │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ PCAir       │    1e+99   │ UNITLESS          │ partition coefficient blood over air                               │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Km          │    0.00484 │ MilliMOL          │ Michaelis-Menten constant liver                                    │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Michaelis   │    1       │ UNITLESS          │ flag for Michaelis-Menten or linear metabolism                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Vmax        │    0.26    │ MilliMOL_PER_L_HR │ maximum rate of metabolism in the liver                            │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ fub         │    0.11    │ UNITLESS          │ unbound fraction in blood                                          │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ fSA_exposed │    0.1     │ UNITLESS          │ fraction of skin surface area actually exposed                     │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Kp_sc_vs    │    0.1     │ DeciM_PER_HR      │ diffusion rate from stratum corneum to viable skin                 │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ kGut        │    1.3     │ PER_H             │ oral absorption rate constant                                      │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ CLH         │    0       │ L_PER_HR          │ hepatic clearance rate                                             │\n",
-      "├─────────────┼────────────┼───────────────────┼────────────────────────────────────────────────────────────────────┤\n",
-      "│ Ke          │    7.5     │ L_PER_HR          │ renal excretion rate                                               │\n",
-      "╘═════════════╧════════════╧═══════════════════╧════════════════════════════════════════════════════════════════════╛\n"
+      "╒═════════════╤════════════╤═══════════════════╤═════════════════════════════════════════════════════════════════╕\n",
+      "│ Id          │      Value │ Unit              │ Name                                                            │\n",
+      "╞═════════════╪════════════╪═══════════════════╪═════════════════════════════════════════════════════════════════╡\n",
+      "│ BM          │   70       │ KiloGM            │ body weight                                                     │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ BSA         │  190       │ DeciM2            │ body surface area                                               │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scVFat      │    0.209   │ L_PER_KiloGM      │ fat volume as fraction of total body weight                     │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scVRich     │    0.105   │ L_PER_KiloGM      │ richly perfused tissues volume as fraction of total body weight │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scVLiver    │    0.024   │ L_PER_KiloGM      │ liver volume as fraction of total body weight                   │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scVBlood    │    0.068   │ L_PER_KiloGM      │ blood volume as fraction of total body weight                   │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scFBlood    │    4.8     │ L_PER_KiloGM_HR   │ total blood flow per unit mass                                  │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scFFat      │    0.046   │ UNITLESS          │ fraction of blood flow going to adipose tissue                  │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scFPoor     │    0.134   │ UNITLESS          │ fraction total blood flow going to poorly perfused tissue       │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scFLiver    │    0.259   │ UNITLESS          │ fraction total blood flow going to liver                        │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ scFSkin     │    0.054   │ UNITLESS          │ fraction total blood flow going to skin                         │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ fSA_exposed │    0.1     │ UNITLESS          │ fraction of skin surface area actually exposed                  │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Height_sc   │    0.0001  │ DeciM             │ thickness stratum corneum                                       │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Height_vs   │    0.0122  │ DeciM             │ thickness viable epidermis                                      │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Falv        │ 2220       │ L_PER_HR          │ alveolar ventilation rate                                       │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCFat       │   31.11    │ UNITLESS          │ partition coefficient fat over blood                            │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCLiver     │    4.95    │ UNITLESS          │ partition coefficient liver over blood                          │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCRich      │    1.92    │ UNITLESS          │ partition coefficient poorly perfused tissue over blood         │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCPoor      │    3.03    │ UNITLESS          │ partition coefficient richly perfused tissue over blood         │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCSkin_sc   │    0.1     │ UNITLESS          │ partition coefficient viable skin over stratum corneum          │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCSkin      │    3.71    │ UNITLESS          │ partition coefficient viable skin over blood                    │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ PCAir       │    1e+99   │ UNITLESS          │ partition coefficient blood over air                            │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ kGut        │    1.3     │ PER_H             │ absorption rate constant gut                                    │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Kp_sc_vs    │    0.1     │ DeciM_PER_HR      │ diffusion rate from stratum corneum to viable epidermis         │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Km          │    0.00484 │ MilliMOL          │ Michaelis-Menten constant liver                                 │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Michaelis   │    1       │ UNITLESS          │ flag for Michaelis-Menten or linear metabolism                  │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Vmax        │    0.26    │ MilliMOL_PER_L_HR │ maximum rate of metabolism in the liver                         │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ CLH         │    0       │ L_PER_HR          │ hepatic clearance rate                                          │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ Ke          │    7.5     │ L_PER_HR          │ renal excretion rate                                            │\n",
+      "├─────────────┼────────────┼───────────────────┼─────────────────────────────────────────────────────────────────┤\n",
+      "│ fub         │    0.11    │ UNITLESS          │ fraction of chemical unbound in blood                           │\n",
+      "╘═════════════╧════════════╧═══════════════════╧═════════════════════════════════════════════════════════════════╛\n"
      ]
     }
    ],
@@ -233,7 +233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -277,7 +277,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -321,7 +321,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +448,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -513,7 +513,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -579,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -645,7 +645,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
