Add notebooks tests

--- a/notebooks/get_sbml_model_info.ipynb
+++ b/notebooks/get_sbml_model_info.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -99,12 +99,12 @@
    "source": [
     "### Describe compartments\n",
     "\n",
-    "Each compartment should be linked to a compartment matching the vocabulary of the to-be-developed PBK modelling ontology. For each compartment, the unit of measurement of the volume should be specified."
+    "Each compartment should be linked to a compartment matching the vocabulary of the PBK modelling ontology. For each compartment, the unit of measurement of the volume should be specified."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -196,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -265,12 +265,12 @@
     "\n",
     "We distinguish between internal and external parameters. Internal parameters are set by the model, via initial assignment rules, based on other parameters. External parameters are parameters that can be specified in model parametrisations. In SBML, these the *isSetConstant* method can be used to distinguish between these types of parameters.\n",
     "\n",
-    "The unit for each parameter should be specied. Unitless parameters should be explicitly specified as such. Each parameter should be associated with the correct ontological term(s) that exactly identify the type of parameter so that it becomes possible to search for the parameter value in databases. How to accomplish this is yet unclear?"
+    "The unit for each parameter should be specified. Unitless parameters should be explicitly specified as such. Each parameter should be associated with the correct ontology term(s) that exactly identify the type of parameter so that it becomes possible to search for the parameter value in databases."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -402,7 +402,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -465,12 +465,12 @@
    "source": [
     "### Render the differential equations\n",
     "\n",
-    "Script below renders the differential equations of the model in simple text format. Would be nice to get some latex formatting for this as well."
+    "Script below renders the differential equations of the model in simple text format."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
