Update model to reduce unit consistency warnings and add taxon annotation

--- a/notebooks/get_sbml_model_info.ipynb
+++ b/notebooks/get_sbml_model_info.ipynb
@@ -23,7 +23,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -183,11 +183,6 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
    "source": [
     "### Describe substances (chemical species)\n",
     "\n",
@@ -196,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -233,7 +228,7 @@
       "├────────────┼──────────────────────────────────────────────────────────────┼─────────────────┼──────────┤\n",
       "│ QExcret    │ amount of chemical excreted in urine (cumulated)             │ Urine           │ MilliMOL │\n",
       "├────────────┼──────────────────────────────────────────────────────────────┼─────────────────┼──────────┤\n",
-      "│ QAir       │ amount of chemical in air                                    │ Air             │ MilliMOL │\n",
+      "│ QAir       │ amount of chemical in alveolar air                           │ Air             │ MilliMOL │\n",
       "╘════════════╧══════════════════════════════════════════════════════════════╧═════════════════╧══════════╛\n"
      ]
     }
@@ -270,14 +265,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Number of parameters: 41\n",
+      "Number of parameters: 42\n",
       "╒═════════════╤═════════════════════════════════════════════════════════════════╤═══════════════════╤══════════════╤════════════════════════════════════════════╕\n",
       "│ Id          │ Name                                                            │ Unit              │ IsExternal   │ URI                                        │\n",
       "╞═════════════╪═════════════════════════════════════════════════════════════════╪═══════════════════╪══════════════╪════════════════════════════════════════════╡\n",
@@ -292,6 +287,8 @@
       "│ scVLiver    │ liver volume as fraction of total body weight                   │ L_PER_KiloGM      │ True         │ http://purl.obolibrary.org/obo/PBPKO_00078 │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ scVBlood    │ blood volume as fraction of total body weight                   │ L_PER_KiloGM      │ True         │ http://purl.obolibrary.org/obo/PBPKO_00107 │\n",
+      "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
+      "│ scVArt      │ arterial blood volume as fraction of total blood volume         │ UNITLESS          │ True         │                                            │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
       "│ scFBlood    │ total blood flow per unit mass                                  │ L_PER_KiloGM_HR   │ True         │                                            │\n",
       "├─────────────┼─────────────────────────────────────────────────────────────────┼───────────────────┼──────────────┼────────────────────────────────────────────┤\n",
@@ -402,7 +399,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -427,9 +424,9 @@
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ L_PER_KiloGM      │ litre (exponent = 1, multiplier = 1, scale = 0), gram (exponent = -1, multiplier = 1, scale = 3)                                                        │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
-      "│ L_PER_KiloGM_HR   │ litre (exponent = 1, multiplier = 1, scale = 0), gram (exponent = -1, multiplier = 1, scale = 3), second (exponent = -1, multiplier = 3600, scale = 0)  │\n",
-      "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ UNITLESS          │ dimensionless (exponent = 1, multiplier = 1, scale = 0)                                                                                                 │\n",
+      "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
+      "│ L_PER_KiloGM_HR   │ litre (exponent = 1, multiplier = 1, scale = 0), gram (exponent = -1, multiplier = 1, scale = 3), second (exponent = -1, multiplier = 3600, scale = 0)  │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
       "│ L_PER_HR          │ litre (exponent = 1, multiplier = 1, scale = 0), second (exponent = -1, multiplier = 3600, scale = 0)                                                   │\n",
       "├───────────────────┼─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┤\n",
@@ -443,7 +440,6 @@
     }
    ],
    "source": [
-    "# Create parameters info table\n",
     "dt_params = []\n",
     "print(\"Number of units: \" + str(model.getNumUnitDefinitions()))\n",
     "for i in range(0,model.getNumUnitDefinitions()):\n",
@@ -470,30 +466,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "d[QFat]/dt = FFat * conc(QArt, Art)\n",
-      "             - FFat * conc(QFat, Fat) / PCFat\n",
-      "d[QRich]/dt = FRich * conc(QArt, Art)\n",
-      "              - FRich * conc(QRich, Rich) / PCRich\n",
-      "d[QPoor]/dt = FPoor * conc(QArt, Art)\n",
-      "              - FPoor * conc(QPoor, Poor) / PCPoor\n",
-      "d[QLiver]/dt = FLiver * conc(QArt, Art)\n",
-      "               - FLiver * conc(QLiver, Liver) / PCLiver\n",
+      "d[QFat]/dt = FFat * (QArt / Art)\n",
+      "             - FFat * (QFat / Fat) / PCFat\n",
+      "d[QRich]/dt = FRich * (QArt / Art)\n",
+      "              - FRich * (QRich / Rich) / PCRich\n",
+      "d[QPoor]/dt = FPoor * (QArt / Art)\n",
+      "              - FPoor * (QPoor / Poor) / PCPoor\n",
+      "d[QLiver]/dt = FLiver * (QArt / Art)\n",
+      "               - FLiver * (QLiver / Liver) / PCLiver\n",
       "               + kGut * QGut\n",
       "               - fub * piecewise(metab_MM(Vmax, Km, PCLiver, QLiver, Liver), gt(Michaelis, 0.5), metab_MA(CLH, PCLiver, QLiver, Liver))\n",
       "d[QMetab]/dt = fub * piecewise(metab_MM(Vmax, Km, PCLiver, QLiver, Liver), gt(Michaelis, 0.5), metab_MA(CLH, PCLiver, QLiver, Liver))\n",
       "d[QGut]/dt = - kGut * QGut\n",
-      "d[QSkin_u]/dt = FSkin_u * conc(QArt, Art)\n",
+      "d[QSkin_u]/dt = FSkin_u * (QArt / Art)\n",
       "                - FSkin_u * conc(QSkin_u, Skin_u) / PCSkin\n",
       "                - f_su * conc(QSkin_u, Skin_u) / PCSkin_sc\n",
       "                + f_su * conc(QSkin_sc_u, Skin_sc_u)\n",
-      "d[QSkin_e]/dt = FSkin_e * conc(QArt, Art)\n",
+      "d[QSkin_e]/dt = FSkin_e * (QArt / Art)\n",
       "                - FSkin_e * conc(QSkin_e, Skin_e) / PCSkin\n",
       "                - f_se * conc(QSkin_e, Skin_e) / PCSkin_sc\n",
       "                + f_se * conc(QSkin_sc_e, Skin_sc_e)\n",
@@ -501,26 +497,26 @@
       "                   - f_su * conc(QSkin_sc_u, Skin_sc_u)\n",
       "d[QSkin_sc_e]/dt = f_se * conc(QSkin_e, Skin_e) / PCSkin_sc\n",
       "                   - f_se * conc(QSkin_sc_e, Skin_sc_e)\n",
-      "d[QArt]/dt = - FFat * conc(QArt, Art)\n",
-      "             - FRich * conc(QArt, Art)\n",
-      "             - FPoor * conc(QArt, Art)\n",
-      "             - FLiver * conc(QArt, Art)\n",
-      "             - FSkin_u * conc(QArt, Art)\n",
-      "             - FSkin_e * conc(QArt, Art)\n",
-      "             + FBlood * conc(QVen, Ven)\n",
-      "             - Ke * fub * conc(QArt, Art)\n",
-      "             - Falv * conc(QArt, Art) / PCAir\n",
-      "             + FBlood * conc(QAir, Air)\n",
-      "d[QVen]/dt = FFat * conc(QFat, Fat) / PCFat\n",
-      "             + FRich * conc(QRich, Rich) / PCRich\n",
-      "             + FPoor * conc(QPoor, Poor) / PCPoor\n",
-      "             + FLiver * conc(QLiver, Liver) / PCLiver\n",
+      "d[QArt]/dt = - Falv * (QArt / Art) / PCAir\n",
+      "             + FBlood * (QAir / Air)\n",
+      "             - FFat * (QArt / Art)\n",
+      "             - FRich * (QArt / Art)\n",
+      "             - FPoor * (QArt / Art)\n",
+      "             - FLiver * (QArt / Art)\n",
+      "             - FSkin_u * (QArt / Art)\n",
+      "             - FSkin_e * (QArt / Art)\n",
+      "             + FBlood * (QVen / Ven)\n",
+      "             - Ke * fub * (QArt / Art)\n",
+      "d[QVen]/dt = FFat * (QFat / Fat) / PCFat\n",
+      "             + FRich * (QRich / Rich) / PCRich\n",
+      "             + FPoor * (QPoor / Poor) / PCPoor\n",
+      "             + FLiver * (QLiver / Liver) / PCLiver\n",
       "             + FSkin_u * conc(QSkin_u, Skin_u) / PCSkin\n",
       "             + FSkin_e * conc(QSkin_e, Skin_e) / PCSkin\n",
-      "             - FBlood * conc(QVen, Ven)\n",
-      "d[QExcret]/dt = Ke * fub * conc(QArt, Art)\n",
-      "d[QAir]/dt = Falv * conc(QArt, Art) / PCAir\n",
-      "             - FBlood * conc(QAir, Air)\n"
+      "             - FBlood * (QVen / Ven)\n",
+      "d[QExcret]/dt = Ke * fub * (QArt / Art)\n",
+      "d[QAir]/dt = Falv * (QArt / Art) / PCAir\n",
+      "             - FBlood * (QAir / Air)\n"
      ]
     }
    ],
